--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="primary">#2A004E</color>
+    <color name="accent">#C77DFF</color>
+    <color name="background_light">#F7F5F8</color>
+    <color name="background_dark">#121212</color>
+    <color name="card_dark">#1E1E1E</color>
+    <color name="text_light_primary">#151018</color>
+    <color name="text_light_secondary">#775E8D</color>
+    <color name="text_dark_primary">#F5F5F5</color>
+    <color name="text_dark_secondary">#A9A9A9</color>
+    <color name="border_light">#E1DAE7</color>
+    <color name="border_dark">#333333</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
